// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compile > compile 'cities.txt' fmt: 'plaintext' gz: false alt: true 1`] = `
"
# cspell-tools: keep-case no-split

London
Los Angeles
Mexico City
New Amsterdam
New Delhi
New York
Paris
San Francisco
~london
~los angeles
~mexico city
~new amsterdam
~new delhi
~new york
~paris
~san francisco
"
`;

exports[`compile > compile 'cities.txt' fmt: 'plaintext' gz: false alt: undefined 1`] = `
"
# cspell-tools: keep-case no-split

London
Los Angeles
Mexico City
New Amsterdam
New Delhi
New York
Paris
San Francisco
"
`;

exports[`compile > compile 'cities.txt' fmt: 'plaintext' gz: true alt: true 1`] = `
"
# cspell-tools: keep-case no-split

London
Los Angeles
Mexico City
New Amsterdam
New Delhi
New York
Paris
San Francisco
~london
~los angeles
~mexico city
~new amsterdam
~new delhi
~new york
~paris
~san francisco
"
`;

exports[`compile > compile 'cities.txt' fmt: 'plaintext' gz: true alt: undefined 1`] = `
"
# cspell-tools: keep-case no-split

London
Los Angeles
Mexico City
New Amsterdam
New Delhi
New York
Paris
San Francisco
"
`;

exports[`compile > compile 'cities.txt' fmt: 'trie3' gz: false alt: undefined 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv3
base=10
# Built by cspell-tools.
# Data:
__DATA__
L
o
ndon$4s Angeles$9<2
M
e
xico City$9<2
N
e
w Amsterdam$9Delhi$5York$8
P
a
ri#13;<4
S
a
n Francisco$9<4
"
`;

exports[`compile > compile 'sampleCodeDic.txt' fmt: 'plaintext' gz: false alt: true 1`] = `
"
# cspell-tools: keep-case no-split

!Codemsg
!Errorerror
!codecode
!err
+code
+code+
+error
+error+
+msg
Café
Code
Code+
Error
Error+
msg
~!codemsg
~!errorerror
~cafe
~café
~code
~code+
~error
~error+
"
`;

exports[`compile > compile 'sampleCodeDic.txt' fmt: 'plaintext' gz: false alt: undefined 1`] = `
"
# cspell-tools: keep-case no-split

!Codemsg
!Errorerror
!codecode
!err
+code
+code+
+error
+error+
+msg
Café
Code
Code+
Error
Error+
msg
"
`;

exports[`compile > compile conditional 'cities.txt' fmt: 'plaintext' gz: false alt: true 1`] = `
"
# cspell-tools: keep-case no-split

London
Los Angeles
Mexico City
New Amsterdam
New Delhi
New York
Paris
San Francisco
~london
~los angeles
~mexico city
~new amsterdam
~new delhi
~new york
~paris
~san francisco
"
`;

exports[`compile > compile conditional 'cities.txt' fmt: 'plaintext' gz: false alt: undefined 1`] = `
"
# cspell-tools: keep-case no-split

London
Los Angeles
Mexico City
New Amsterdam
New Delhi
New York
Paris
San Francisco
"
`;

exports[`compile > compile conditional 'cities.txt' fmt: 'plaintext' gz: true alt: true 1`] = `
"
# cspell-tools: keep-case no-split

London
Los Angeles
Mexico City
New Amsterdam
New Delhi
New York
Paris
San Francisco
~london
~los angeles
~mexico city
~new amsterdam
~new delhi
~new york
~paris
~san francisco
"
`;

exports[`compile > compile conditional 'cities.txt' fmt: 'plaintext' gz: true alt: undefined 1`] = `
"
# cspell-tools: keep-case no-split

London
Los Angeles
Mexico City
New Amsterdam
New Delhi
New York
Paris
San Francisco
"
`;

exports[`compile > compile conditional 'cities.txt' fmt: 'trie3' gz: false alt: undefined 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv3
base=10
# Built by cspell-tools.
# Data:
__DATA__
L
o
ndon$4s Angeles$9<2
M
e
xico City$9<2
N
e
w Amsterdam$9Delhi$5York$8
P
a
ri#13;<4
S
a
n Francisco$9<4
"
`;

exports[`compile > compile conditional 'sampleCodeDic.txt' fmt: 'plaintext' gz: false alt: true 1`] = `
"
# cspell-tools: keep-case no-split

!Codemsg
!Errorerror
!codecode
!err
+code
+code+
+error
+error+
+msg
Café
Code
Code+
Error
Error+
msg
~!codemsg
~!errorerror
~cafe
~café
~code
~code+
~error
~error+
"
`;

exports[`compile > compile conditional 'sampleCodeDic.txt' fmt: 'plaintext' gz: false alt: undefined 1`] = `
"
# cspell-tools: keep-case no-split

!Codemsg
!Errorerror
!codecode
!err
+code
+code+
+error
+error+
+msg
Café
Code
Code+
Error
Error+
msg
"
`;

exports[`compile > compile filtered 'dicts/cities.txt', excludeWordsFrom: [ 'build-exclude/src/exclude.txt' ] 1`] = `
"
# cspell-tools: keep-case no-split

Los Angeles
Mexico City
New Amsterdam
New Delhi
New York
Paris
San Francisco
"
`;

exports[`compile > compile filtered 'dicts/colors.txt', excludeWordsFrom: [ 'build-exclude/src/exclude.txt' ] 1`] = `
"
# cspell-tools: keep-case no-split

black
blue
cyan
magenta
orange
pink
red
white
yellow
"
`;
